Fix Vercel deployment: Enforce zero-build static site configuration
BEFORE:
- vercel.json: Minimal config, could trigger auto-detection
- package.json: Had build/dev scripts that might confuse Vercel
- No explicit framework: null declaration

AFTER:
- vercel.json: Explicit zero-build config with buildCommand: null
- package.json: Removed all scripts, minimal dependencies only
- Added .vercelignore to exclude dev files
- Clear declaration: This is a static HTML site + Serverless Functions

Changes:
- Set framework: null to prevent auto-detection
- Set buildCommand: null to disable builds
- Set outputDirectory: null (root is the output)
- Simplified package.json to dependencies only
- Added .vercelignore for cleaner deployments

--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "pictrikit",
   "version": "1.0.0",
+  "private": true,
   "description": "Free screenshot layout tool - Create beautiful image compositions",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Static site - no build needed'",
-    "start": "vercel dev"
-  },
-  "keywords": ["screenshot", "layout", "image", "tool", "vercel"],
-  "author": "PictriKit Team",
-  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@vercel/kv": "^3.0.0"
   },
