--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,5 @@
 {
-  "version": 2,
   "buildCommand": null,
-  "devCommand": null,
-  "installCommand": "npm install",
-  "framework": null,
   "outputDirectory": null,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 10
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    }
-  ]
+  "installCommand": "npm install --production"
 }
