fix: migrate to @upstash/redis

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-# Vercel KV Configuration
-# Get these values from: Vercel Dashboard → Storage → Your KV Database → .env.local tab
-KV_REST_API_URL=https://your-kv-url.kv.vercel-storage.com
-KV_REST_API_TOKEN=your-token-here
+# Upstash Redis Configuration (from Vercel Marketplace)
+# Get these values from: Vercel Dashboard → Storage → Your Upstash Redis → .env.local tab
+UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-token-here
+
+# Alternative: Legacy KV environment variable names (also supported)
+# KV_REST_API_URL=https://your-redis-url.upstash.io
+# KV_REST_API_TOKEN=your-token-here
 
 # Optional: Admin token for managing feedback
 FEEDBACK_ADMIN_TOKEN=your-secret-admin-token-here
