--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-# Upstash Redis Configuration (from Vercel Marketplace)
-# Get these values from: Vercel Dashboard → Storage → Your Upstash Redis → .env.local tab
-UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
-UPSTASH_REDIS_REST_TOKEN=your-token-here
+# Redis Configuration (Redis Labs or any Redis provider)
+# Use the full Redis URL including credentials
+REDIS_URL=redis://username:password@host:port
 
-# Alternative: Legacy KV environment variable names (also supported)
-# KV_REST_API_URL=https://your-redis-url.upstash.io
-# KV_REST_API_TOKEN=your-token-here
+# Or use the KV_REST_API_URL variable (same as REDIS_URL)
+KV_REST_API_URL=redis://redis-14238.c100.us-east-1-4.ec2.cloud.redislabs.com:14238
 
 # Optional: Admin token for managing feedback
 FEEDBACK_ADMIN_TOKEN=your-secret-admin-token-here
