refactor: migrate from Redis to Supabase for feedback system

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-# Upstash Redis Configuration (from Vercel Marketplace)
-# Get these values from: Vercel Dashboard → Storage → Upstash Redis → .env.local tab
-UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
-UPSTASH_REDIS_REST_TOKEN=your-token-here
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
 
-# Optional: Admin token for managing feedback
-FEEDBACK_ADMIN_TOKEN=your-secret-admin-token-here
+# Optional: Admin token for feedback management
+FEEDBACK_ADMIN_TOKEN=your-secret-admin-token
