--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@upstash/redis": "^1.28.0"
+    "@supabase/supabase-js": "^2.39.0"
   }
 }
