--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pictrikit",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0"
   }
