feat: SEO Master Plan 2026 - add index.html redirect, update sitemap lastmod, create strategy docs

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
       "has": [{ "type": "host", "value": "pictrikit.com" }],
       "destination": "https://www.pictrikit.com/:path*",
       "permanent": true
+    },
+    {
+      "source": "/index.html",
+      "destination": "/",
+      "permanent": true
     }
   ],
   "headers": [
