--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "cleanUrls": true,
+  "trailingSlash": false,
   "redirects": [
     {
       "source": "/:path*",
@@ -49,6 +51,5 @@
   ],
   "rewrites": [
     { "source": "/.well-known/security.txt", "destination": "/.well-known/security.txt" }
-  ],
-  "trailingSlash": false
+  ]
 }
