feat: UX improvements and feedback system migration
- Fixed Grid layout labels (22, 13, 23, 33 instead of 22, 13, 23, 33)
- Added use case hints for all layout tools (Linear, Focus, Grid, Compare, Frames)
- Added Blog page with SEO optimization and structured data
- Added Blog and FAQ navigation links to index.html and app.html
- Updated sitemap.xml with blog.html entry
- Migrated feedback system from Supabase to Turso
- Updated feedback API to use Turso database
- Added TURSO-SETUP.md documentation
- Removed Supabase dependencies and files
- Updated package.json with Turso client

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Supabase Configuration
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
+# Turso Configuration
+TURSO_DATABASE_URL=libsql://your-db-name.turso.io
+TURSO_AUTH_TOKEN=your-auth-token
 
 # Optional: Admin token for feedback management
 FEEDBACK_ADMIN_TOKEN=your-secret-admin-token
